k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tesis-demo
  labels:
    app: tesis-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tesis-demo
  template:
    metadata:
      labels:
        app: tesis-demo
    spec:
      containers:
      - name: tesis-demo
        image: ${DOCKERHUB_USER}/tesis-demo:${IMAGE_TAG}
        ports:
        - containerPort: 8080
