k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tesis-demo
spec:
  type: ClusterIP
  selector:
    app: tesis-demo
  ports:
  - port: 80
    targetPort: 8080
